[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Game_Over.gd" type="Script" id=1]

[node name="GameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
alignment = 1

[node name="FinalScore" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 85.0
margin_bottom = 18.0

[node name="ScoreLabel" type="Label" parent="VBoxContainer/FinalScore"]
margin_right = 73.0
margin_bottom = 14.0
text = "Final Score:"

[node name="ScoreCount" type="Label" parent="VBoxContainer/FinalScore"]
margin_left = 77.0
margin_right = 85.0
margin_bottom = 14.0
text = "0"

[node name="HighScore" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 85.0
margin_bottom = 36.0

[node name="HiScoreLabel" type="Label" parent="VBoxContainer/HighScore"]
margin_right = 72.0
margin_bottom = 14.0
text = "High Score:"

[node name="HiScoreValue" type="Label" parent="VBoxContainer/HighScore"]
margin_left = 76.0
margin_right = 84.0
margin_bottom = 14.0
text = "0"
